fixed spacing on quote of the day

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
 }
 
 body {
@@ -192,3 +194,9 @@ li:nth-child(odd) {
 /* .newsDiv {
     padding: 10px;
 } */
+
+
+.quoteDiv {
+    padding: 10px;
+    margin: 10px;
+}
